backend/k8s/monitoring-k3s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: whale-tracker-prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana-serviceaccount
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
            - name: provider-config-volume
              mountPath: /etc/grafana/provisioning/dashboards
            - name: datasource-config-volume
              mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-sc-dashboard
          image: kiwigrid/k8s-sidecar:1.25.2
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: provider-config-volume
          configMap:
            name: grafana-provider-config
        - name: datasource-config-volume
          configMap:
            name: grafana-datasources-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: whale-tracker-prod
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: whale-tracker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: whale-tracker-prod
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
