backend/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whale-frontend
  namespace: whale-tracker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whale-frontend
  template:
    metadata:
      labels:
        app: whale-frontend
    spec:
      containers:
        - name: whale-frontend
          image: whale-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whale-frontend
  namespace: whale-tracker-prod
spec:
  type: ClusterIP
  selector:
    app: whale-frontend
  ports:
    - port: 80
      targetPort: 80
